project/terraform/modules/ec2/main.tf
# security group for wordpress
resource "aws_security_group" "wordpress_sg" {
  name        = "wordpress-security-group"
  description = "Allow http https and ssh traffic"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "WordPressSecurityGroup"
  }
}

# ec2 instance for wordpress
resource "aws_instance" "wordpress_instance" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  subnet_id              = var.public_subnet_id
  vpc_security_group_ids = [aws_security_group.wordpress_sg.id]
  key_name               = var.key_name

  tags = {
    Name = "WordPressInstance"
  }
}
